added list HTML & guess my age JS

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ p   {   font-family:Helvetica;
     }
 
 h1 {
-        font-family:boycott;
+        font-family:impact;
         color:black;
         font-size:40px;
         font-kerning: 10px;
