--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     border-style:solid;
     border-width:1px;
     border-color: red;
-} */
+}  */
 
 
 body{
@@ -35,6 +35,12 @@ h2 {
     font-size: 30px;
     -webkit-text-stroke-width: 1px;
     -webkit-text-stroke-coloR: black;
+    margin-left: 0%;
+    margin-right: 0%;
+    border-left-width: 0px;
+    border-right-width: 0px;
+    padding-left: 10px;
+    padding-right:10px;
 }
 
 h4 {
@@ -63,7 +69,7 @@ ol{
     color:gray;
     list-style: -moz-element();
     text-align: left;
-    padding-left:45%;
+    padding-left:47.5%;
 
 
 }
@@ -73,6 +79,12 @@ ul{
     color:gray;
     list-style: square;
     text-align: left;
-    padding-left: 45%;
+    padding-left: 47.5%;
     
+}
+
+#square {
+	width: 30px;
+	height: 30px;
+	background: red;
 }
