--- a/style.css
+++ b/style.css
@@ -7,19 +7,17 @@
 
 body{
     background-color: aquamarine;
-    text-align: center;
-    align-content: center;
-    position: center;
     margin-left: 20px;
     margin-right: 20px;
-    
     }
 
 p { 
     font-family:Helvetica;
+    text-align: center;
     background-color: khaki;
     box-shadow: 3px;
     padding: 2px;
+    
         
     }
 
@@ -28,6 +26,7 @@ h1 {
     color:black;
     font-size:40px;
     font-kerning: 10px;
+    text-align: center;
 }
 h2 {
     font-family: impact;
@@ -41,20 +40,38 @@ h2 {
     border-right-width: 0px;
     padding-left: 10px;
     padding-right:10px;
+    text-align: center;
 }
 
 h4 {
     font-family:impact;
     font-size:15;
+    text-align: center;
 
 }
+
 header{
+    width:100%;
     background-color: black;
     color:aquamarine;
     font-family: aller, bold;
-    margin-top: 0px;
-    border-top:0px;
+    
 }
+nav ul{
+    padding:10px;
+    border-left:10px;
+    border-right:10px;
+    margin: 0 auto;
+    list-style-type: none; 
+    color:aquamarine;
+    display: flex;
+    justify-content: space-around;
+}
+
+nav li{
+    padding: 10px, 10px;
+}
+
 
 footer{
     margin-bottom:0px;
@@ -64,27 +81,12 @@ footer{
 
 }
 
+
 ol{
-    font-family: Helvetica-bold;
-    color:gray;
-    list-style: -moz-element();
-    text-align: left;
-    padding-left:47.5%;
-
-
-}
-
-ul{
     font-family: Helvetica-bold;
     color:gray;
     list-style: square;
     text-align: left;
     padding-left: 47.5%;
     
-}
-
-#square {
-	width: 30px;
-	height: 30px;
-	background: red;
 }
